se agrega calculadora.cgi (no es funcional..) e index un poco, solo hay divs

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>calcuadora</title>
+<title>calculadora</title>
 <style></style>
 </head>
-<body></body>
+<body><div class="calculadora"><div class="encabezado">calculadora.com</div></div></body>
 </html>
