--- a/index.html
+++ b/index.html
@@ -1,22 +1,19 @@
 <!DOCTYPE html>
-<html lang= "es">
+<html lang="es">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>calculadora</title>
-<style></style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>calculadora</title>
+    <style></style>
 </head>
 <body>
     <div class="calculadora">
         <div class="encabezado">calculadora.com</div>
-        <textarea id="entrada" placeholder="Ingresa una expresión"></textarea>
-        <div class="contenedor-resultado">
-            <form action="calculadora.cgi" method="post">
-                <button type="submit">=</button>
-            </form>
-            <input type="text" id="resultado" class="resultado" placeholder=" " readonly>
-        </div>
+        <form action="/cgi-bin/calculadora.cgi" method="post">
+            <textarea id="entrada" name="q" placeholder="Ingresa una expresión"></textarea>
+            <button type="submit">Calcular</button>
+        </form>
     </div>
-
 </body>
 </html>
+
