--- a/laboratorio9/public/index.html
+++ b/laboratorio9/public/index.html
@@ -3,22 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Buscador v1.02</title>
+    <title>Buscador v1.05</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Sedgwick+Ave+Display&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: "Sedgwick Ave Display", serif;
+            background-color: #f4f4f4;
+        }
+        .container {
+            text-align: center;
+            padding: 20px;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
         <div class="logo">Busqueda csv</div>
         <div class="barraDeBusqueda">
-            <input type="text" name="q" id="entrada" placeholder="Escribe algun dato sobre la universidad..">
+            <input type="text" name="q" id="entrada" placeholder="Escribe algún dato sobre la universidad..">
         </div>
         <div class="buttons-container">
             <form action="/cgi-bin/busquedaU.cgi" method="get">
-                <input type="hidden" name="q" id="botonparabuscar">
-                <button type="submit" onclick="">Buscar</button>
+                <button type="submit">Buscar</button>
             </form>
         </div>
     </div>
 </body>
 </html>
-
 
