--- a/laboratorio9/public/index.html
+++ b/laboratorio9/public/index.html
@@ -5,27 +5,81 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Buscador v1.05</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Sedgwick+Ave+Display&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: "Sedgwick Ave Display", serif;
-            background-color: #f4f4f4;
-        }
-        .container {
-            text-align: center;
-            padding: 20px;
-        }
-    </style>
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Hubot+Sans:ital,wght@1,300&family=Playwrite+GB+S:ital,wght@0,100..400;1,100..400&family=Sedgwick+Ave+Display&display=swap" rel="stylesheet">
 </head>
+<style>
+body {
+    font-family: "Sedgwick Ave Display", serif;
+  font-weight: 400;
+  font-style: normal;
+    background-color: #f4f4f4;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
+.container {
+    text-align: center;
+    background: white;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    position: relative;
+    z-index: 1;
+}
+
+.logo {
+    font-size: 9em;
+    color: #333;
+    white-space: nowrap;
+    overflow-x: visible;
+    position: relative;
+    z-index: 2;
+    margin-top: -0.6em; 
+    margin-left: -1.5em; /* Agregar margen izquierdo para que sobresalga horizontalmente */
+    margin-right: -1.5em; /* Agregar margen derecho para que sobresalga horizontalmente */
+}
+
+.barraDeBusqueda {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+}
+
+input[type="text"] {
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    width: 300px;
+    margin-right: 10px;
+}
+
+button {
+    padding: 10px 15px;
+    background-color: #9acd3b;
+    border: none;
+    color: white;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 1em;
+}
+
+button:hover {
+    background-color: #8bc34a;
+}
+
+</style>
 <body>
     <div class="container">
-        <div class="logo">Busqueda csv</div>
+        <div class="logo">Universidades csv</div>
         <div class="barraDeBusqueda">
-            <input type="text" name="q" id="entrada" placeholder="Escribe algún dato sobre la universidad..">
-        </div>
-        <div class="buttons-container">
             <form action="/cgi-bin/busquedaU.cgi" method="get">
+                <input type="text" name="q" id="entrada" placeholder="Escribe algún dato sobre la universidad..">
                 <button type="submit">Buscar</button>
             </form>
         </div>
